--- a/Index.html
+++ b/Index.html
@@ -19,6 +19,6 @@
         <p>Total Price: <span id="total-price">BDT0</span></p>
     </div>
 
-    <script src="Files/JavaScript/Index.js"></script>
+    <script src="Files/JavaScript/CalX.js"></script>
 </body>
 </html>
