--- a/Index.html
+++ b/Index.html
@@ -3,7 +3,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Shop</title>
-    <link rel="stylesheet" href="Files/CSS/index.css">
+    <link rel="stylesheet" href="Files/CSS/LengtaBaba.css">
 </head>
 <body>
     <div class="product">
