--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
  <header class="prime_head flex">
 
 
-        <div>
-            <img src="Files/Images/AzLogo-removebg-preview.png" alt="Amazon.com" class="logo">
+        <div class="logo">
+            <img src="Files/Images/AzLogo-removebg-preview.png" alt="Amazon.com">
         </div>
 
         <button class="mobile_nav_toggle" aria-controls="prim_navi" aria-expanded="false">
