--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
   <link rel="stylesheet" href="Files/CSS Files/bootstrap-grid.min.css">
   <link rel="stylesheet" href="Files/CSS Files/bootstrap-reboot.min.css">
   <link rel="stylesheet" href="Files/CSS Files/jarallax.css">
+  <link rel="stylesheet" href="Files/CSS Files/navbar.css">
   <link rel="stylesheet" href="Files/CSS Files/theme.style.css">
   <link rel="stylesheet" href="Files/CSS Files/gallery.style.css">
   <link rel="stylesheet" href="Files/CSS Files/additional.css" type="text/css">
