--- a/index.html
+++ b/index.html
@@ -587,6 +587,7 @@
   <script src="Files/JS Files/touch-swipe.min.js"></script>
   <script src="Files/JS Files/mobi.shop.scripts.js"></script>
   <script src="Files/JS Files/navbar.js"></script>
+  <script src="Files/JS Files/navbar-dropdown.js">
   <script src="Files/JS Files/theme.scripts.js"></script>
   <script src="Files/JS Files/vimoplayer.js"></script>
   <script src="Files/JS Files/gallerySpt.js"></script>
