--- a/index.html
+++ b/index.html
@@ -19,13 +19,22 @@
   <link rel="stylesheet" href="Files/CSS Files/navbar.css">
   <link rel="stylesheet" href="Files/CSS Files/theme.style.css">
   <link rel="stylesheet" href="Files/CSS Files/gallery.style.css">
-  <link rel="stylesheet" href="Files/CSS Files/additional.css" type="text/css">
+  <link rel="preload" as="style" href="Files/CSS Files/additional.css"><link rel="stylesheet" href="Files/CSS Files/additional.css" type="text/css">
   
-  
+  <!-- Google Tag Manager-->
+    <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+    new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+    j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+    '//www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+    })(window,document,'script','dataLayer','GTM-PFK425');</script>
+<!-- End Google Tag Manager -->  
   
 </head>
 <body>
 
+<!-- Google Tag Manager noscript-->
+<noscript><iframe src="//www.googletagmanager.com/ns.html?id=GTM-PFK425"
+height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
     <nav class="navbar navbar-dropdown navbar-fixed-top navbar-expand-lg">
         <div class="container">
