--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     <nav class="navbar navbar-dropdown navbar-fixed-top navbar-expand-lg">
         <div class="container">
             <div class="navbar-brand">
-                
-                <span class="navbar-caption-wrap"><a class="navbar-caption text-white display-5" href="https://muopee.github.io/home">Next Gen Opee</a></span>
+                <span class="navbar-logo"><a href=""><img src="Files/Images/AzLogo-removebg-preview.png" alt="Learn to Win" style="height: 4.5rem;"></a></span>
+                <span class="navbar-caption-wrap"><a class="navbar-caption text-white display-5" href="">Amazon</a></span>
             </div>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
                 <div class="hamburger">
