--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="Next Gen Opee" content="Designed amd built by Next Gen">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="shortcut icon" href="Files/Images/AzLogo-removebg-preview.png" type="image/x-icon">
+  <link rel="shortcut icon" href="Files/Images/61-removebg-preview.png" type="image/x-icon">
   <meta name="description" content="Get your desired product directly from the producer. Only on Amazon.com!">
-  <title>Amazon.com</title>
+  <title>E-Commerce by Opee</title>
   <link rel="stylesheet" href="Files/CSS Files/all.css">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700">
   <link rel="stylesheet" href="Files/CSS Files/bootstrap.min.css">
@@ -39,7 +39,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     <nav class="navbar navbar-dropdown navbar-fixed-top navbar-expand-lg">
         <div class="container">
             <div class="navbar-brand">
-                <span class="navbar-logo"><a href=""><img src="Files/Images/AzLogo-removebg-preview.png" alt="Learn to Win" style="height: 4.5rem;"></a></span>
+                <span class="navbar-logo"><a href=""><img src="Files/Images/61-removebg-preview.png" alt="Learn to Win" style="height: 4.5rem;"></a></span>
             </div>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
                 <div class="hamburger">
@@ -85,7 +85,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         <div class="row justify-content-center">
             <div class="col-12 col-lg-6 col-md-8 align-center">
                 
-                <h2 class="mbr-section-title align-center mbr-fonts-style mbr-bold mbr-white display-1">Amazon.com</h2>
+                <h2 class="mbr-section-title align-center mbr-fonts-style mbr-bold mbr-white display-1">MUJAHID OPEE</h2>
             </div>
         </div>
     </div>
